# testfest

./: .gitignore  173Tourney.cabal  CS173Tourney.cabal  LICENSE  README  README.txt  Setup.lhs  build  deploy-cs173.sh  run
daemon/: 173tourney  monitrc
doc/: testfest.rkt
scripts/: camlharness
server-src/: CS173Server.hs  FinalRound.hs  Logging.hs  Mail.hs  Sessions.hs  TourneyAccounts.hs
server-src/CS173/: Actions.hs  Config.hs  Data.hs  Messages.hs  NormalizeSubmissions.hs  Sample.hs  Server.hs  Tourney.hs
server-src/CS173/Test/: AssignmentAdmin.hs
src/: background.rkt  config.rkt  db-test.rkt  db.rkt  log.rkt  sample-test.rkt  sample.rkt  server.rkt  types.rkt  users.rkt
src/res/: index.html  style.css
src/res/lib/: tourney.js
src/sqlite/: sqlite-ffi.ss  sqlite.ss
static/: gc-test.ss  plai-test.sh  plai-test.ss
static/web/: index.html  style.css
static/web/lib/: tourney.js
