Name:           173Tourney
Version:        2.5
Cabal-Version:	>= 1.2
Copyright:      Copyright (c) 2007-2008 Arjun Guha
License:        BSD3
License-file:   LICENSE
Author:         Arjun Guha
Maintainer:     Arjun Guha <arjun@cs.brown.edu>
Homepage:       http://www.cs.brown.edu/courses/cs173
Category:       Tools
Build-Type:     Custom
Synopsis:       test-fest / war-grading system for CS173
Data-Dir: static
Data-Files: 
  web/index.html web/style.css  web/lib/tourney.js
  web/fx/flapjax.js web/lib/prototype.js plai-test.ss gc-test.ss
 
Executable tourney-server
  Main-Is:        CS173Server.hs
  Hs-Source-Dirs: server-src
  Build-Depends:
    base, network, mtl, containers, directory, bytestring, old-time,
    CouchDB==0.8.0.4,json>=0.3.3,WebServer>=1.1, process,hslogger>=1.0.5,
    Crypto,base64-string,time>=1.1.2.1,old-locale,filepath>=1.1.0.0
  ghc-options:    -fwarn-incomplete-patterns -threaded
  Extensions:
    FlexibleInstances PatternSignatures

Executable cs173tourney-accounts
  Main-Is:        TourneyAccounts.hs
  Hs-Source-Dirs: server-src
  Build-Depends:
    base, network, mtl, containers, directory, bytestring, old-time,
    CouchDB==0.8.0.4,json>=0.3.3,WebServer>=1.1, process,hslogger>=1.0.5,
    Crypto,base64-string,time>=1.1.2.1,old-locale,random>=1.0.0.0
  ghc-options:    -fwarn-incomplete-patterns -threaded
  Extensions:
    FlexibleInstances PatternSignatures

Executable 173finalround
  Main-Is:        FinalRound.hs
  Hs-Source-Dirs: server-src
  Build-Depends:
    base, network, mtl, containers, directory, bytestring, old-time,
    CouchDB==0.8.0.4,json>=0.3.3,process,hslogger>=1.0.5,
    time>=1.1.2.1,old-locale,random>=1.0.0.0
  ghc-options:    -fwarn-incomplete-patterns -threaded
  Extensions:
    FlexibleInstances PatternSignatures
